# scikit-allel

./: .gitattributes  .gitignore  .pep8speaks.yml  .pyup.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  ag1000g.phase1.ar3.pass.3L.h5  appveyor.yml  ipnbdoctest.py  pyproject.toml  release.txt  requirements.txt  requirements_ci.txt  requirements_dev.txt  requirements_dev_base.txt  requirements_dev_optional.txt  requirements_rtfd.txt  requirements_test.txt  requirements_travis.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build_wheels.yml  deploy.yml  github-deploy.yml  test.yml
allel/: __init__.py  abc.py  arg.py  bcolz.py  compat.py  constants.py  errors.py  gt.py  gt_new.py  io.py  io_vcf_read.py  loc.py  model.py  plot.py  stats.py  util.py
allel/chunked/: __init__.py  core.py  storage_bcolz.py  storage_hdf5.py  storage_zarr.py  util.py
allel/io/: __init__.py  fasta.py  gff.py  util.py  vcf_read.py  vcf_write.py  vcfreader.py
allel/legacy/: legacy_test_stats.py  stats.py  test_model.py
allel/model/: __init__.py  abc.py  bcolz.py  chunked.py  dask.py  dask_old.py  display.py  generic.py  ndarray.py  util.py
allel/opt/: gt.c  gt.pyx  io_vcf.c  io_vcf.pyx  io_vcf_read.c  io_vcf_read.pyx  model.c  model.pyx  stats.c  stats.pyx
allel/simulate/: simulate.py
allel/stats/: __init__.py  admixture.py  decomp.py  decomposition.py  distance.py  diversity.py  fst.py  hw.py  ld.py  mendel.py  misc.py  preprocessing.py  roh.py  selection.py  sf.py  window.py
allel/test/: test_api.py  test_gt.py  test_gt_new.py  test_io_vcf_read.py  test_loc.py  test_model.py  test_model_api.py  test_model_bcolz.py  test_model_chunked.py  test_model_dask.py  (+4 more)
docs/: Makefile  bcolz.rst  chunked.rst  conf.py  examples.py  gt.rst  index.rst  io.rst  loc.rst  model.rst  plot.rst  release.rst  stats.rst  util.rst
fixture/: ann.vcf  sample.sorted.gff.gz.tbi  sample.vcf  sample.vcf.gz.tbi  test16.vcf  test32.vcf  test54.vcf.gz.tbi
notebooks/: repr_html.ipynb  sandbox.ipynb
profiling/: read_vcf.py
sandbox/: sandbox.py  vcftools.cpp
temp/: donotdelete.txt
(+100 files in other folders)
